[package]
name = "postgres_range"
version = "0.11.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Range support for rust-postgres"
repository = "https://github.com/sfackler/rust-postgres-range"
all_features = true


[features]
with-chrono-0_4 = ["chrono-04", "postgres-types/with-chrono-0_4"]
with-decimal-1 = ["decimal-1"]

[dependencies]
decimal-1 = { version = "1.0", package = "rust_decimal", features = [
    "db-tokio-postgres",
    "db-postgres",
], optional = true, default-features = true }

postgres-protocol = "0.6"
postgres-types = "0.2"
chrono-04 = { version = "0.4", package = "chrono", optional = true, default-features = false }


[dev-dependencies]
postgres = "0.19"
